--- a/main.css
+++ b/main.css
@@ -17,4 +17,76 @@ body {
 	background-color: #ffffff;
 	margin-right: auto;
 	margin-left: auto;
+	padding:40px;
 } 
+
+.Sign-up {
+	color: #808080;
+	text-align: center;
+	padding-bottom: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+}
+
+label {
+	display: block;
+	padding-left: 20px;
+	margin-bottom: 15px;
+	font-family: 'Roboto', sans-serif;
+}
+
+input {
+	display: block;
+	font-size: larger;
+	margin-left: 20px;
+	width: 320px;
+	border: 2px solid #e6e6e6;
+	padding: 15px;	
+	margin-bottom: 15px;
+}
+
+button {
+	display: block;
+	background-color: #33cc00;
+	text-align: center;
+	margin-left: 20px;
+	margin-top: 20px;
+	width: 353px;
+	border: none;
+	padding:20px;
+	font-size: larger;
+	font-family: 'Roboto', sans-serif;
+	color: #ffffff;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.forgot-password {
+	font-style: underline;
+	color: #808080;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	font-weight: lighter;
+}
+
+h3 {
+	color: #ffffff;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	font-style: underline;
+	font-weight: lighter;
+}
+
+.log-in {
+	color: #ffffff;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	font-style: underline;
+	font-weight: bolder;
+}
+
+
+
+
+
+
